Adição de receitas

--- a/PersonalCheffProject/receitas/templates/index.html
+++ b/PersonalCheffProject/receitas/templates/index.html
@@ -12,5 +12,23 @@
     <h1>Personal Cheff</h1>
     <h2>Seu site de Receitas</h2>
     
+    <table border="1">
+        <tr>
+            <td>Receita</td>
+            <td>Video</td>
+            <td>Ações</td>
+        </tr>
+        <tr>
+            <td>Suco de Laranja</td>
+            <td>https://www.youtube.com/watch?v=Zbm4LXnr3j8</td>
+            <td><a href="sucodelaranja">Ver Receita Completa</a></td>
+        </tr>
+        <tr>
+            <td>Miojo</td>
+            <td>https://www.youtube.com/watch?v=gM1uCD63wTs</td>
+            <td><a href="miojo">Ver Receita Completa</a></td>
+        </tr>
+
+    </table>
 </body>
 </html>
