Adição de novas receitas

--- a/PersonalCheffProject/receitas/templates/index.html
+++ b/PersonalCheffProject/receitas/templates/index.html
@@ -20,13 +20,25 @@
         </tr>
         <tr>
             <td>Suco de Laranja</td>
-            <td>https://www.youtube.com/watch?v=Zbm4LXnr3j8</td>
+            <td><a href="https://www.youtube.com/watch?v=Zbm4LXnr3j8">Ver no Youtube</a></td>
             <td><a href="sucodelaranja">Ver Receita Completa</a></td>
         </tr>
         <tr>
             <td>Miojo</td>
-            <td>https://www.youtube.com/watch?v=gM1uCD63wTs</td>
+            <td><a href="https://www.youtube.com/watch?v=gM1uCD63wTs">Ver no Youtube</a></td>
             <td><a href="miojo">Ver Receita Completa</a></td>
+        </tr>
+
+        <tr>
+            <td>Bolo de Fuba</td>
+            <td><a href="https://www.youtube.com/watch?v=ukXdVZ4DmRw">Ver no Youtube</a></td>
+            <td><a href="bolodefuba">Ver Receita Completa</a></td>
+        </tr>
+
+        <tr>
+            <td>Salada</td>
+            <td><a href="https://www.youtube.com/watch?v=1jbFqjZrOBw">Ver no Youtube</a></td>
+            <td><a href="salada">Ver Receita Completa</a></td>
         </tr>
 
     </table>
