--- a/PersonalCheffProject/receitas/templates/miojo.html
+++ b/PersonalCheffProject/receitas/templates/miojo.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Receita de Miojo</h1>
     <h3>Modo de Preparo</h3>
-    
+    <ol>
+        <li>Abra o pacote do miojo</li>
+        <li>Coloque em uma panela com agua e leve ao fogo por 5 minutos</li>
+        <li>Coloque o tempero na panela</li>
+        <li>Misture o macarrão com o tempero</li>
+        <li>Tire da panela, e sirva em um prato!</li>
+    </ol>
 </body>
 </html>
