--- a/PersonalCheffProject/receitas/templates/index.html
+++ b/PersonalCheffProject/receitas/templates/index.html
@@ -5,42 +5,64 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Cheff - Home</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 
 </head>
 <body>
-    <h1>Personal Cheff</h1>
-    <h2>Seu site de Receitas</h2>
-    
-    <table border="1">
-        <tr>
-            <td>Receita</td>
-            <td>Video</td>
-            <td>Ações</td>
-        </tr>
-        <tr>
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-dark p-4">
+          <h5 class="text-white h4">Personal Cheff</h5>
+          <span class="text-muted">Seu APP de Receitas</span>
+        </div>
+      </div>
+      <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+   
+   
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Receita</th>
+            <th scope="col">Video</th>
+            <th scope="col">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
             <td>Suco de Laranja</td>
             <td><a href="https://www.youtube.com/watch?v=Zbm4LXnr3j8">Ver no Youtube</a></td>
-            <td><a href="sucodelaranja">Ver Receita Completa</a></td>
-        </tr>
-        <tr>
+            <td><a href="sucodelaranja">Ver Receita Completa</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
             <td>Miojo</td>
             <td><a href="https://www.youtube.com/watch?v=gM1uCD63wTs">Ver no Youtube</a></td>
             <td><a href="miojo">Ver Receita Completa</a></td>
-        </tr>
-
-        <tr>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
             <td>Bolo de Fuba</td>
             <td><a href="https://www.youtube.com/watch?v=ukXdVZ4DmRw">Ver no Youtube</a></td>
             <td><a href="bolodefuba">Ver Receita Completa</a></td>
-        </tr>
-
-        <tr>
+          </tr>
+          <tr>
+            <th scope="row">4</th>
             <td>Salada</td>
             <td><a href="https://www.youtube.com/watch?v=1jbFqjZrOBw">Ver no Youtube</a></td>
-            <td><a href="salada">Ver Receita Completa</a></td>
-        </tr>
+            <td><a href="bolodefuba">Ver Receita Completa</a></td>
+          </tr>
+        </tbody>
+      </table>
 
-    </table>
+
 </body>
 </html>
