Inserção de Links para retornar a pagina inicial

--- a/PersonalCheffProject/receitas/templates/bolodefuba.html
+++ b/PersonalCheffProject/receitas/templates/bolodefuba.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -27,5 +28,9 @@
 
     <h3>Resultado</h3>
     <img src="https://s2.glbimg.com/GDADinKyW8a4LTtwZyXlG1OiP_E=/0x0:1280x800/984x0/smart/filters:strip_icc()/i.s3.glbimg.com/v1/AUTH_1f540e0b94d8437dbbc39d567a1dee68/internal_photos/bs/2022/w/I/HzhyCkTqm1UoDynv8XDQ/bolo-de-fuba-fofino.jpg" width="600" height="600">
+    <p>
+        <a href="{% url 'index' %}">Voltar</a>
+    </p>
+    
 </body>
 </html>
