--- a/PersonalCheffProject/receitas/templates/index.html
+++ b/PersonalCheffProject/receitas/templates/index.html
@@ -46,25 +46,25 @@
             <th scope="row">1</th>
             <td>Suco de Laranja</td>
             <td><a href="https://www.youtube.com/watch?v=Zbm4LXnr3j8" class="url-link">Ver no Youtube</a></td>
-            <td><a href="sucodelaranja" class="url-link">Ver Receita Completa</td>
+            <td><a href="{% url 'sucodelaranja' %}" class="url-link">Ver Receita Completa</td>
           </tr>
           <tr>
             <th scope="row">2</th>
             <td>Miojo</td>
             <td><a href="https://www.youtube.com/watch?v=gM1uCD63wTs" class="url-link">Ver no Youtube</a></td>
-            <td><a href="miojo" class="url-link">Ver Receita Completa</a></td>
+            <td><a href="{% url 'miojo' %}" class="url-link">Ver Receita Completa</a></td>
           </tr>
           <tr>
             <th scope="row">3</th>
             <td>Bolo de Fuba</td>
             <td><a href="https://www.youtube.com/watch?v=ukXdVZ4DmRw" class="url-link">Ver no Youtube</a></td>
-            <td><a href="bolodefuba" class="url-link">Ver Receita Completa</a></td>
+            <td><a href="{% url 'bolodefuba' %}" class="url-link">Ver Receita Completa</a></td>
           </tr>
           <tr>
             <th scope="row">4</th>
             <td>Salada</td>
             <td><a href="https://www.youtube.com/watch?v=1jbFqjZrOBw" class="url-link">Ver no Youtube</a></td>
-            <td><a href="bolodefuba" class="url-link">Ver Receita Completa</a></td>
+            <td><a href="{% url 'bolodefuba' %}" class="url-link">Ver Receita Completa</a></td>
           </tr>
         </tbody>
       </table>
