--- a/PersonalCheffProject/receitas/templates/miojo.html
+++ b/PersonalCheffProject/receitas/templates/miojo.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -16,5 +17,9 @@
         <li>Misture o macarrão com o tempero</li>
         <li>Tire da panela, e sirva em um prato!</li>
     </ol>
+    <p>
+        <a href="{% url 'index' %}">Voltar</a>
+    </p>
+    
 </body>
 </html>
