--- a/PersonalCheffProject/receitas/templates/sucodelaranja.html
+++ b/PersonalCheffProject/receitas/templates/sucodelaranja.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -15,5 +16,9 @@
         <li>Adoce a gosto</li>
     </ol>
     
+<p>
+    <a href="{% url 'index' %}">Voltar</a>
+</p>
+
 </body>
 </html>
