--- a/PersonalCheffProject/receitas/templates/salada.html
+++ b/PersonalCheffProject/receitas/templates/salada.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -21,5 +22,9 @@
         <li>Tempere a gosto!</li>
         <li>Coma!</li>
     </ul>
+    <p>
+        <a href="{% url 'index' %}">Voltar</a>
+    </p>
+    
 </body>
 </html>
