--- a/PersonalCheffProject/receitas/templates/salada.html
+++ b/PersonalCheffProject/receitas/templates/salada.html
@@ -1,13 +1,26 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salada</title>
-</head>
-<body>
+{% block content %}
+
+    <div class="collapse" id="navbarToggleExternalContent">
+        <div class="bg-dark p-4">
+          <h5 class="text-white h4">Personal Cheff</h5>
+          <span class="text-muted">Seu APP de Receitas</span>
+        </div>
+      </div>
+      <nav class="navbar navbar-dark bg-dark">
+        <div class="container-fluid">
+
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+   
+      <header>
+        <img src="{% static 'logo.png' %}" class="imagem-logo">
+      </header>
+
     <h1>Salada</h1>
     <h3>Ingredientes</h3>
     <ol>
@@ -25,6 +38,4 @@
     <p>
         <a href="{% url 'index' %}">Voltar</a>
     </p>
-    
-</body>
-</html>
+    {% endblock %}
