--- a/PersonalCheffProject/receitas/templates/sucodelaranja.html
+++ b/PersonalCheffProject/receitas/templates/sucodelaranja.html
@@ -1,24 +1,37 @@
+{% extends 'base.html' %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suco de Laranja</title>
-</head>
-<body>
-    <h1>Como fazer um suco de laranja</h1>
-    <h2>Modo de Preparo</h2>
+{% block content %}
+
+<div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark p-4">
+      <h5 class="text-white h4">Personal Cheff</h5>
+      <span class="text-muted">Seu APP de Receitas</span>
+    </div>
+  </div>
+  <nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    </div>
+  </nav>
+
+  <header>
+    <img src="{% static 'logo.png' %}" class="imagem-logo">
+  </header>
+  <p>
+    <a href="{% url 'index' %}">Voltar</a>
+  </p>
+
+    <h2>Como fazer um suco de laranja</h2>
+    <h3>Modo de Preparo</h3>
     <ol>
         <li>Lave a Laranja</li>
         <li>Esprema a Laranja</li>
         <li>Adoce a gosto</li>
     </ol>
     
-<p>
-    <a href="{% url 'index' %}">Voltar</a>
-</p>
 
-</body>
-</html>
+
+{% endblock %}
