--- a/PersonalCheffProject/PersonalCheffProject/static/estilos.css
+++ b/PersonalCheffProject/PersonalCheffProject/static/estilos.css
@@ -13,3 +13,15 @@ body{
 .url-link{
     text-decoration: none;
 }
+footer{
+    text-align: center;
+    background-color: darkblue;
+    color: white;
+    font-size: 18px;
+    padding: 10px;
+    margin-top: 50px;
+    text-decoration: none;
+}
+footer a{
+    color: lightcoral;
+}
