--- a/PersonalCheffProject/receitas/templates/salada.html
+++ b/PersonalCheffProject/receitas/templates/salada.html
@@ -1,26 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block content %}
+{% include 'partials/header.html' %}
 
-    <div class="collapse" id="navbarToggleExternalContent">
-        <div class="bg-dark p-4">
-          <h5 class="text-white h4">Personal Cheff</h5>
-          <span class="text-muted">Seu APP de Receitas</span>
-        </div>
-      </div>
-      <nav class="navbar navbar-dark bg-dark">
-        <div class="container-fluid">
-
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-      </nav>
-   
-      <header>
-        <img src="{% static 'logo.png' %}" class="imagem-logo">
-      </header>
-
+<p>
+    <a href="{% url 'index' %}">Voltar</a>
+</p>
     <h1>Salada</h1>
     <h3>Ingredientes</h3>
     <ol>
@@ -35,7 +20,7 @@
         <li>Tempere a gosto!</li>
         <li>Coma!</li>
     </ul>
-    <p>
-        <a href="{% url 'index' %}">Voltar</a>
-    </p>
+    
+    {% include 'partials/footer.html' %}
     {% endblock %}
+  
