--- a/PersonalCheffProject/receitas/templates/index.html
+++ b/PersonalCheffProject/receitas/templates/index.html
@@ -2,43 +2,23 @@
 {% load static %}
 {% block content %}
 {% include 'partials/header.html' %}
-
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Receita</th>
-            <th scope="col">Video</th>
-            <th scope="col">Ações</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Suco de Laranja</td>
-            <td><a href="https://www.youtube.com/watch?v=Zbm4LXnr3j8" class="url-link">Ver no Youtube</a></td>
-            <td><a href="{% url 'sucodelaranja' %}" class="url-link">Ver Receita Completa</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Miojo</td>
-            <td><a href="https://www.youtube.com/watch?v=gM1uCD63wTs" class="url-link">Ver no Youtube</a></td>
-            <td><a href="{% url 'miojo' %}" class="url-link">Ver Receita Completa</a></td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Bolo de Fuba</td>
-            <td><a href="https://www.youtube.com/watch?v=ukXdVZ4DmRw" class="url-link">Ver no Youtube</a></td>
-            <td><a href="{% url 'bolodefuba' %}" class="url-link">Ver Receita Completa</a></td>
-          </tr>
-          <tr>
-            <th scope="row">4</th>
-            <td>Salada</td>
-            <td><a href="https://www.youtube.com/watch?v=1jbFqjZrOBw" class="url-link">Ver no Youtube</a></td>
-            <td><a href="{% url 'bolodefuba' %}" class="url-link">Ver Receita Completa</a></td>
-          </tr>
-        </tbody>
-      </table>
-      {% include 'partials/footer.html' %}
-
-      {% endblock %}
+    <table class="table table-striped table-hover">
+        <tr class="table-dark">
+            <th>Receita</th>
+            <th>Vídeo</th>
+            <th>Ações</th>
+        </tr>
+        {% for chave, uma_receita in lista_receitas.items %}
+            <tr>
+                <td>
+                    <img src="{% static 'suco.png' %}" class="icone-suco">
+                    {{uma_receita}}
+                </td>
+                <td>https://www.youtube.com/watch?v=Nn9140bDPnc</td>
+                <td><a href="{% url 'sucodelaranja' %}" class="btn btn-info">Ver receita completa</a></td>
+            </tr>
+        {% endfor %}
+       
+    </table>
+{% include 'partials/footer.html' %}
+{% endblock %}
