Adição de função para retornar dados direto do banco de dados.

--- a/PersonalCheffProject/receitas/templates/contato.html
+++ b/PersonalCheffProject/receitas/templates/contato.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <form>
-        <input type="text" name="Nome">
-        <input type="text" name="E-mail">
-        <textarea name="Mensagem"></textarea>
+        <input type="text" name="Nome"><br>
+        <input type="text" name="E-mail"><br>
+        <textarea name="Mensagem"></textarea><br>
         <button name="Enviar">Enviar</button>
     </form>
 
