--- a/PersonalCheffProject/receitas/templates/index.html
+++ b/PersonalCheffProject/receitas/templates/index.html
@@ -14,9 +14,15 @@
                 <td>
                     {{receita.nome_receita}}
                 </td>
-                <td>{{receita.nota}}</td>
+                <td></td>
+                        {% with ''|center:receita.nota as range %}
+                        {% for i in range %}
+                        <img src="https://cdn.iconfinder.com/data/icons/christmas-flat-4/58/020_-_Star-512.png" width="18">
+                        {% endfor %}
+                        {% endwith %}
+                </td>
                 <td>{{receita.video}}</td>
-                <td><a href="{% url 'sucodelaranja' %}" class="btn btn-info">Ver receita completa</a></td>
+                <td><a href="{% url 'receita' receita.id %}" class="btn btn-info">Ver receita completa</a></td>
             </tr>
         {% endfor %}
        
